# ktikz

./: .gitignore  BUILD_MACOS.md  BUILD_WINDOWS.md  CMakeLists.txt  README.md
src/: appconfig.h  compileservice.cpp  compileservice.h  coordinateparser.cpp  coordinateparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_properties.cpp  model.h  pdfcanvas.cpp  pdfcanvas.h  settingsdialog.cpp  settingsdialog.h
